--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Work Day Scheduler</title>
 </head>
 
@@ -17,6 +19,7 @@
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
         <p id="currentDay" class="lead"></p>
+        <button id="clear" class="clearBtn clearBtn:Hover"> CLEAR ALL </button>
     </header>
     <div class="container">
         <!-- Timeblocks go here -->
@@ -32,6 +35,7 @@
             <!-- has a white bottom border except for last on in example -->
             <!-- need to update what the icon looks like on hover -->
             <button class="col-2 saveBtn"><i class="far fa-save"></i></button>
+
 
         </div>
 
@@ -145,9 +149,11 @@
             <!-- need to update what the icon looks like on hover -->
             <button class="col-2 saveBtn"><i class="far fa-save"></i></button>
 
+
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
